# duckdb-zipfs

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
examples/: README.md  a.jsonl.bz2  data_seek.parquet  test.csv.bz2  test.csv.xz  test.jsonl.bz2  test.jsonl.xz
scripts/: generate_seek_fixtures.py  setup-custom-toolchain.sh
src/: archive_contents.cpp  archive_file_system.cpp  bz2_file_system.cpp  deflate_index.cpp  noop_archive_contents.cpp  noop_archive_file_system.cpp  raw_archive_file_system.cpp  xz_file_system.cpp  zip_contents.cpp  zip_file_system.cpp  zip_member_handle.cpp  zipfs_extension.cpp
src/include/: archive_contents.hpp  archive_file_system.hpp  bz2_file_system.hpp  deflate_index.hpp  noop_archive_contents.hpp  noop_archive_file_system.hpp  utils.hpp  xz_file_system.hpp  zip_contents.hpp  zip_file_system.hpp  zip_member_handle.hpp  zipfs_extension.hpp
test/: README.md
test/sql/: archive_contents.test  archive_contents_windows.test  archivefs_read_csv_option.test  archivefs_read_jsonl.test  archivefs_windows.test  bz2_read_csv.test  bz2_read_jsonl.test  xz_read_csv.test  xz_read_jsonl.test  zip_contents.test  zipfs.test  zipfs_read_csv.test  zipfs_read_csv_gzip.test  zipfs_read_csv_option.test  zipfs_read_csv_windows.test  zipfs_read_jsonl.test  zipfs_read_jsonl_windows.test  zipfs_seek_parquet.test  zipfs_write.test  zipstream_read_csv.test  zipstream_read_jsonl.test
